--- a/db.yaml
+++ b/db.yaml
@@ -1,7 +1,7 @@
 mysql_host: 'localhost'
 mysql_user: 'root'
 # Enter your password in field below
-mysql_password: 'Tanvi9427!SQL'
+mysql_password: '<enter password>'
 mysql_db: 'PDC'
 
 
